# t2d

./: .clang-format  .clang-tidy  .cmake-format.yaml  .env  .gitignore  .gitmodules  .shfmtignore  CMakeLists.txt  CONTRIBUTING.md  DEPENDENCIES.md  Dockerfile  LICENSE  NOTICE  README.md  buf.yaml  docker-compose.yml  perf.data  perf.data.old  perf_seed12345_60s.data  qt_local.example.cmake
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  clang-tidy.yml  coverage.yml  release.yml  sanitizers.yml
android/: build.gradle  gradlew  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  native_lib.cpp
android/app/src/main/java/io/t2d/: MainActivity.java
android/app/src/main/java/t2d/: Game.java
android/gradle/wrapper/: gradle-wrapper.properties
config/: server.yaml  server_heavy.yaml  server_s2.yaml  server_test.yaml
docs/: architecture.md  config.md  performance_plan.md  plan.md  projectile_penetration.md  protocol.md  technical_specifications.md  tooling.md
proto/: game.proto
scripts/: build_and_run_tests.sh  build_android.sh  build_full.sh  build_incremental.sh  check_android_toolchain.sh  clang_tidy.sh  format_check.sh  gen_proto_android.sh  install_deps.sh  install_precommit_format_hook.sh  load_run_baseline.sh  package_server.sh  phase0_baseline_capture.sh  profile_cpu.sh  profile_offcpu.sh  run_dev_loop.sh  run_tests_e2e.sh  run_tests_unit.sh  setup_perf_kernel.sh  spdx_check.sh
src/client/: desktop_client.cpp  test_client.cpp
src/client/qt/: ammo_box_model.cpp  ammo_box_model.hpp  crate_model.cpp  crate_model.hpp  entity_model.cpp  entity_model.hpp  input_state.cpp  input_state.hpp  lobby_state.cpp  lobby_state.hpp  projectile_model.cpp  projectile_model.hpp  qt_client.cpp  timing_state.hpp
src/client/qt/qml/: CustomButton.qml  Joystick.qml  Main.qml  t2d_images.qrc
src/common/: alloc_metrics.cpp  framing.cpp  framing.hpp  log_rate_limit.hpp  logger.hpp  metrics.hpp  rle.hpp  snapshot_compress.hpp
src/server/: main.cpp
src/server/auth/: auth_provider.cpp  auth_provider.hpp
src/server/game/: match.cpp  match.hpp  physics.cpp  physics.hpp  snapshot_compress.cpp  snapshot_compress.hpp
src/server/matchmaking/: matchmaker.cpp  matchmaker.hpp  session_manager.cpp  session_manager.hpp
src/server/net/: listener.cpp  listener.hpp  metrics_http.cpp  metrics_http.hpp
tests/: e2e_bot_fill.cpp  e2e_bot_projectile.cpp  e2e_damage_event.cpp  e2e_damage_multi.cpp  e2e_delta_snapshots.cpp  e2e_heartbeat.cpp  e2e_input_move.cpp  e2e_kill_feed.cpp  e2e_match_start.cpp  test_match_config_loader.hpp  unit_framing.cpp  unit_framing_fuzz.cpp  unit_heartbeat_timeout.cpp  unit_session_manager.cpp  unit_snapshot_delta.cpp  unit_snapshot_replay.cpp
